sysv-generator: port one helper function to Rust
This ports one internal sysv-generator helper function (`add_alias`)
from C to Rust.
In order to do so, it introduces a new private library `librshared_ffi`
whose artifacts are produced via `cargo` (shared object) and `cbindgen`
(header).

For the Rust portion, there is now a cargo workspace at the top level
which contains two crates: `rshared_ffi` and `rshared`.
The former contains Rust interop helpers for C, and is consumed by
existing binaries via meson linking.
The latter contains plain Rust code, and in the future can be directly
consumed by further internal Rust libraries or executables without going
through the C façade.
This approach is broadly modeled after [librsvg] design.

This also bumps the minimum meson version to allow [linking] against
custom targets.

[librsvg]: https://people.gnome.org/~federico/blog/exposing-c-and-rust-apis.html
[linking]: https://mesonbuild.com/Release-notes-for-0-51-0.html#can-link-against-custom-targets

--- a/meson.build
+++ b/meson.build
@@ -10,7 +10,7 @@ project('systemd', 'c',
                 'localstatedir=/var',
                 'warning_level=2',
         ],
-        meson_version : '>= 0.46',
+        meson_version : '>= 0.51',
        )
 
 libsystemd_version = '0.27.1'
@@ -1495,6 +1495,7 @@ includes = include_directories('src/basic',
                                'src/libsystemd/sd-network',
                                'src/libsystemd/sd-resolve',
                                'src/libsystemd-network',
+                               'src/rust/rshared_ffi',
                                '.')
 
 add_project_arguments('-include', 'config.h', language : 'c')
@@ -1509,6 +1510,7 @@ subdir('src/libsystemd')
 subdir('src/libsystemd-network')
 subdir('src/journal')
 subdir('src/login')
+subdir('src/rust/rshared_ffi')
 
 libjournal_core = static_library(
         'journal-core',
@@ -2210,7 +2212,7 @@ if conf.get('HAVE_SYSV_COMPAT') == 1
         executable('systemd-sysv-generator',
                    'src/sysv-generator/sysv-generator.c',
                    include_directories : includes,
-                   link_with : [libshared],
+                   link_with : [libshared, librshared_ffi],
                    install_rpath : rootlibexecdir,
                    install : true,
                    install_dir : systemgeneratordir)
